--- a/components/porject1.module.css
+++ b/components/porject1.module.css
@@ -1,22 +1,21 @@
 .porjectTom {
     margin-top: 48px;
-    width:331px;
-    height: 440px;
     border: 0.5px;
     border-style: solid;
     background-color: #1E1E1E;
     border-color: #ABB2BF;
     color: #ABB2BF;
+    width: 100%;
+    padding-bottom: 10px;
 }
 
 .HTML {
-    margin-left: 10px;
     font-family: 'Fira Code';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 21px;
-    color: #ABB2BF;;
+    color: #ABB2BF;
+    padding:6px;
 }
 
 .HHH{
@@ -27,6 +26,7 @@
     font-size: 24px;
     line-height: 31px;
     color: #FFFFFF;
+    padding: 6px;
 }
 
 .HHH2{
@@ -37,6 +37,7 @@
     font-size: 16px;
     line-height: 21px;
     color: #ABB2BF;
+    padding: 6px;
 }
 
 .button1{
@@ -47,6 +48,7 @@
     border-color: #C778DD;
     background-color:#1E1E1E;
     color: #ffff;
+    padding: 6px;
 }
 .button2{
     margin-left: 10px;
