--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,11 @@ body {
     background-color:#1e1e1e ;
 }
 
+* {
+  padding: 0;
+  margin:0;
+}
+
 .heading-4 {
   font-family: 'Fira Code';
   font-style: normal;
